--- a/.env
+++ b/.env
@@ -1,8 +1,7 @@
-# Firebase設定（.env.localファイルに実際の値を設定してください）
-REACT_APP_FIREBASE_API_KEY=your_api_key
-REACT_APP_FIREBASE_AUTH_DOMAIN=your_auth_domain
-REACT_APP_FIREBASE_PROJECT_ID=your_project_id
-REACT_APP_FIREBASE_STORAGE_BUCKET=your_storage_bucket
-REACT_APP_FIREBASE_MESSAGING_SENDER_ID=your_messaging_sender_id
-REACT_APP_FIREBASE_APP_ID=your_app_id
-REACT_APP_FIREBASE_MEASUREMENT_ID=your_measurement_id
+REACT_APP_FIREBASE_API_KEY=AIzaSyCi9zffZ9DKqlH20MlYlMOdgIcgyWYsqdk
+REACT_APP_FIREBASE_AUTH_DOMAIN=history-9a233.firebaseapp.com
+REACT_APP_FIREBASE_PROJECT_ID=history-9a233
+REACT_APP_FIREBASE_STORAGE_BUCKET=history-9a233.appspot.com
+REACT_APP_FIREBASE_MESSAGING_SENDER_ID=628189169902
+REACT_APP_FIREBASE_APP_ID=1:628189169902:web:fc8d5279045f1771498bff
+REACT_APP_FIREBASE_MEASUREMENT_ID=G-D1T96ND9ZE
